# instagram-automation-windows

./: .gitignore  BUILD_INSTRUCTIONS.md  QUICK_SETUP.sh  README.md  SEND_TO_FRIEND.md  WINDOWS_BUILD_GUIDE.md  create-icon.py  requirements.txt  windows-setup.bat
.github/workflows/: build-release.yml
automation-engine/: main.py
browser-core/: Cargo.toml  tauri.conf.json
browser-core/.cargo/: config.toml
browser-core/src/: anti_detection.rs  browser_engine.rs  main.rs  proxy_manager.rs  session_manager.rs
config/: accounts.example.json  proxies.example.json
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.css  App.tsx  index.css
